@@ -42,44 +42,75 @@ public class FastConfig
 private static final String PAR_LINKABLE = "linkable";
 
 /**
- * This array stores the protocol id-s of the linkable protocols that are linked
- * form the protocol given by the array index.
+ * Parameter name in configuration that attaches a transport layer protocol to a
+ * protocol.
+ * @config
+ */
+private static final String PAR_TRANSFER = "transport";
+
+/**
+ * This array stores the protocol id of the {@link peersim.core.Linkable}
+ * protocol that is linked to the protocol given by the array index.
  */
 protected static final int[] links;
+
+/**
+ * This array stores the protocol id of the {@link peersim.transport.Transport}
+ * protocol that is linked to the protocol given by the array index.
+ */
+protected static final int[] transports;
+
 
 // ======================= initialization ===================================
 // ==========================================================================
 
+
 /**
  * This static initialization block reads the configuration for information that
- * it understands. Currently it understands property "linkable" only. When a
- * protocol has a parameter "linkable", it stores this info in a quickly
+ * it understands. Currently it understands property {@value PAR_LINKABLE}
+ * and {@value PAR_TRANFER}. When a
+ * protocol has these parameters, it stores this info in a quickly
  * accessible array so that protocols can use it to quickly access this
  * information.
+ *
+ * Note that this class does not perform any type checks. The purpose if the
+ * class is purely to
+ * speed up the dumb reading of the configuration data.
  */
 static {
+
 	String[] names = Configuration.getNames(Configuration.PAR_PROT);
 	links = new int[names.length];
-	for (int i = 0; i < links.length; ++i) {
+	transports = new int[names.length];
+	for (int i = 0; i < names.length; ++i)
+	{
 		if (Configuration.contains(names[i] + "." + PAR_LINKABLE))
-			links[i] = Configuration.getPid(names[i] + "." + PAR_LINKABLE);
+			links[i] = 
+			Configuration.getPid(names[i] + "." + PAR_LINKABLE);
 		else
 			links[i] = -1;
+		
+		if (Configuration.contains(names[i] + "." + PAR_TRANSFER))
+			transports[i] = 
+			Configuration.getPid(names[i] + "." + PAR_TRANSFER);
+		else
+			transports[i] = -1;
 	}
 }
 
+
 // ======================= methods ==========================================
 // ==========================================================================
+
+
 /**
  * Returns true if the given protocol has a linkable protocol associated with
  * it, otherwise false.
  */
-public static boolean hasLinkable(int pid)
-{
-	return links[pid] >= 0;
-}
+public static boolean hasLinkable(int pid) { return links[pid] >= 0; }
 
 // ---------------------------------------------------------------------
+
 /**
  * Returns the protocol id used by the protocol identified by pid. Throws an
  * IllegalParameterException if there is no linkable associated with the given
@@ -90,9 +121,39 @@ public static int getLinkable(int pid)
 {
 	if (links[pid] < 0) {
 		String[] names = Configuration.getNames(Configuration.PAR_PROT);
-		throw new IllegalParameterException(names[pid], "Protocol " + pid
-				+ " has no linkable parameter");
+		throw new IllegalParameterException(names[pid],
+		"Protocol " + pid + " has no "+PAR_LINKABLE+" parameter");
 	}
 	return links[pid];
 }
+
+// ---------------------------------------------------------------------
+
+/**
+ * Returns true if the given protocol has a transport protocol associated with
+ * it, otherwise false.
+ */
+public static boolean hasTransport(int pid)
+{
+	return transports[pid] >= 0;
+}
+
+// ---------------------------------------------------------------------
+
+/**
+ * Returns the protocol id used by the protocol identified by pid. Throws an
+ * IllegalParameterException if there is no transport associated with the given
+ * protocol: we assume here that his happens when the configuration is
+ * incorrect.
+ */
+public static int getTransport(int pid)
+{
+	if (transports[pid] < 0) {
+		String[] names = Configuration.getNames(Configuration.PAR_PROT);
+		throw new IllegalParameterException(names[pid],
+		"Protocol " + pid + " has no "+PAR_TRANSFER + " parameter");
+	}
+	return transports[pid];
+}
+
 }
